<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerRootLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/realize_seu_cadastro"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp" android:layout_marginEnd="32dp"
        android:hint="@string/hint_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"

        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="@id/usernameInputLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"

        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_create_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"

        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_repeat_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"

        app:boxStrokeColor="@color/box_stroke_color"
        android:textColorHint="@color/text_secondary"
        app:hintTextColor="@color/purple_primary"
        android:textColor="@color/text_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_primary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/repeatPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@id/repeatPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        android:textAllCaps="false"
        android:textColor="@color/purple_primary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:strokeColor="@color/purple_primary" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>