<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.createnewpassword.CreateNewPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/criar_nova_senha"
            app:titleCentered="true"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/nova_senha"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/newPasswordLabel"
        app:layout_constraintStart_toStartOf="@id/newPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/newPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/repeatPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repita_a_senha"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/newPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@id/newPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/newPasswordInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/repeatPasswordLabel"
        app:layout_constraintStart_toStartOf="@id/repeatPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirmar"
        android:textAllCaps="false"
        app:backgroundTint="@color/purple_primary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/repeatPasswordInputLayout"
        app:layout_constraintStart_toStartOf="@id/repeatPasswordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>